@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix for bug #1882265: Server failure when all exp_table entries commented out.
+ common/exp.c: exit() in case of errors.
+Nicolas Weeger, 2008-02-01
 
 Changes for 1.11.0:
 ------------------------------------------------------------------------------
